# ghrm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  biome.json  build.rs  clippy.toml  config.example.toml  justfile  tsconfig.json
.github/workflows/: ci.yml  release.yml
assets/: config.json  js.sha256.json  js.tar.zst  sri.json
assets/css/: blob.css  chrome.css  explorer.css  features.css  file.css  gist.css  page.css  search.css  shell.css  status.css  theme.css  toc.css
assets/html/: shell.html
assets/js/: app.js  chrome.js  dom.js  explorer.js  file.js  gist.js  live.js  main.js  prefs.js  preview.js  search.js  status.js  toc.js  vendor.js  view.js
assets/js/adapters/: code.js  common.js  copy.js  math.js  mermaid.js
assets/js/chunks/: adapters.js  explorer.js  shared.js
assets/templates/: README.md  base.html  explorer.html  gist.html  gist_stash.html  page.html
assets/templates/fragments/: about.html  icons.html  nav_empty.html  nav_parent_row.html  nav_row.html  readme_box.html  sidebar.html  title_block.html
assets/templates/fragments/explorer/: header.html
assets/templates/fragments/search/: content.html  path.html
assets/templates/macros/: about.html  explorer.html  menu.html  stat.html
bench/: .justfile  README.md  asv.conf.json  bw  path_search.py  pyproject.toml  report.py
bench/benchmarks/: ghrm.py  nav_scan.py  path_search.py
bench/scripts/: ghrm_stat.py
docs/: adr-000.md
ghrm-stat/: Cargo.toml
ghrm-stat/src/: filesystem.rs  lib.rs  main.rs
ghrm-stat/src/tools/: authors.rs  churn.rs  commits.rs  created.rs  dependencies.rs  description.rs  git.rs  head.rs  history.rs  languages.rs  last_change.rs  license.rs  loc.rs  manifest.rs  metadata.rs  mod.rs  pending.rs  project.rs  size.rs  title.rs  url.rs  version.rs
lua/ghrm/: init.lua
smoke/: basics.md  diagrams.md  languages.md
smoke/html/: index.html  script.js  style.css
src/: README.md  api.rs  assets.rs  auth.rs  column.rs  config.rs  crumbs.rs  delivery.rs  dirs.rs  explorer.rs  filter.rs  gist.rs  http.rs  main.rs  options.rs  paths.rs  query.rs  render.rs  repo.rs  runtime.rs  search.rs  searchview.rs  server.rs  shell.rs  testutil.rs  theme.rs  tmpl.rs  vendor.rs  view.rs  walk.rs  watch.rs
src/explorer/: column.rs  crumbs.rs  filter.rs  view.rs  walk.rs  watch.rs
src/http/: about.rs  api.rs  archive.rs  assets.rs  auth.rs  delivery.rs  gist.rs  server.rs  shell.rs  theme.rs  vendor.rs
src/render/: alert.rs  anchor.rs  code.rs  math.rs  path.rs  tests.rs
src/repo/: log.rs  remote.rs  root.rs
src/search/: content.rs  mod.rs  path.rs  view.rs
templates/: base.html  explorer.html
templates/fragments/: nav_empty.html  nav_table.html  readme_box.html
types/: ghrm.d.ts
ui/: README.md  icons.json  icons.tsx  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/scripts/: check.js  check.ts  icons.js  icons.ts  sri.ts
ui/src/: dom.js  dom.ts  explorer.js  explorer.ts  features.ts  file.js  file.ts  gist.js  gist.ts  indent.ts  live.js  live.ts  main.ts  nav.js  nav.ts  path-copy.ts  prefs.ts  preview.js  preview.ts  runtime.ts  search.js  search.ts  status.js  status.ts  toc.js  toc.ts  vendor.js  vendor.ts
ui/src/adapters/: code.js  code.ts  common.ts  copy.js  copy.ts  map.js  map.ts  math.js  math.ts  mermaid.js  mermaid.ts
ui/src/islands/: define.ts
ui/src/islands/archive/: progress.ts
ui/src/islands/explorer/: menu.ts
ui/src/islands/gist/: editor.ts  stash.ts
ui/src/islands/search/: panel.ts
ui/src/test/: about-panels.test.ts  code.test.ts  copy.test.ts  explorer.test.ts  features.test.ts  indent.test.ts  live.test.ts  main.test.ts  prefs.test.ts  runtime.test.ts
ui/src/test/islands/archive/: progress.test.ts
ui/src/test/islands/explorer/: menu.test.ts
ui/src/test/islands/gist/: editor.test.ts  stash.test.ts
ui/src/test/islands/search/: panel.test.ts
ui/types/: ghrm.d.ts
