[package]
name = "ghrm"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "ghrm"
path = "src/main.rs"

[dependencies]
comrak = { version = "0.52", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
html-escape = "0.2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "time", "io-util", "net"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = "0.3"

notify = "8"
notify-debouncer-full = "0.6"
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
include_dir = "0.7"
askama = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
