[package]
name = "ghrm"
version = "0.4.4"
edition = "2024"
rust-version = "1.88"
description = "Fast local GitHub-flavored Markdown and repository browser"
license = "GPL-3.0-only"
repository = "https://github.com/brege/ghrm"
readme = "README.md"
keywords = ["github", "markdown", "preview", "offline"]
categories = ["command-line-utilities", "text-processing"]
include = [
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "askama.toml",
  "assets/config.json",
  "assets/css/**",
  "assets/img/**",
  "assets/js/**",
  "assets/templates/**",
  "build.rs",
  "config.example.toml",
  "ghrm-stat/Cargo.toml",
  "ghrm-stat/src/**",
  "lua/**",
  "smoke/**",
  "src/**",
]

[[bin]]
name = "ghrm"
path = "src/main.rs"

[dependencies]
comrak = { version = "0.52", default-features = false, features = ["shortcodes"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
html-escape = "0.2"
content_inspector = "0.2"
infer = { version = "0.19", default-features = false }
directories = "6"
ureq = { version = "2", default-features = false, features = ["tls"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "time", "io-util", "net"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = "0.3"

notify = "8"
notify-debouncer-full = "0.6"
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
include_dir = "0.7"
askama = "0.12"
hmac = "0.12"
percent-encoding = "2"
sha2 = "0.10"
ghrm-stat = { version = "0.1.0", path = "ghrm-stat" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
