[workspace]
members = ["ghrm-stat"]

[workspace.package]
version = "0.4.13"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-only"

[workspace.dependencies]
ghrm-stat = { version = "0.4.13", path = "ghrm-stat" }

[package]
name = "ghrm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Fast local GitHub-flavored Markdown and repository browser"
repository = "https://github.com/brege/ghrm"
readme = "README.md"
keywords = ["github", "markdown", "preview", "offline"]
categories = ["command-line-utilities", "text-processing"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/askama.toml",
  "/assets/config.json",
  "/assets/sri.json",
  "/assets/css/**",
  "/assets/img/**",
  "/assets/js.sha256.json",
  "/assets/js.tar.zst",
  "/assets/templates/**",
  "/build.rs",
  "/config.example.toml",
  "/ghrm-stat/Cargo.toml",
  "/ghrm-stat/resources/**",
  "/ghrm-stat/src/**",
  "/lua/**",
  "/smoke/**",
  "/src/**",
]

[[bin]]
name = "ghrm"
path = "src/main.rs"

[dependencies]
comrak = { version = "0.52", default-features = false, features = ["shortcodes"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
filetime = "0.2"
html-escape = "0.2"
lol_html = "2"
content_inspector = "0.2"
infer = { version = "0.19", default-features = false }
bytecount = "0.6"
directories = "6"
ureq = { version = "3", default-features = false, features = ["rustls"] }
webbrowser = { version = "1", features = ["hardened"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "time", "io-util", "net"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io-util"] }

notify = "8"
notify-debouncer-full = "0.7"
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
include_dir = "0.7"
askama = "0.16"
tar = { version = "0.4", default-features = false }
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"
hmac = "0.13"
form_urlencoded = "1"
percent-encoding = "2"
sha2 = "0.11"
base64 = "0.22"
ghrm-stat.workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
