[package]
name = "ghrm-stat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ghrm-stat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askalono = "0.5"
clap = { version = "4", features = ["derive"] }
gix = { version = "0.83", default-features = false, features = [
  "index",
  "max-performance-safe",
  "sha1",
  "status",
] }
ignore = "0.4"
onefetch-manifest = "2.27.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
tokei = "14"
